# side_effect

./: .gitignore  CHANGELOG.md  LICENSE  README.html  README.md  logs.txt  merge_data_json.py  pyproject.toml
data/: non_simulants_reviews.csv  reddit_posts.csv  reddit_posts_adderall.csv  reddit_posts_clonidine.csv  reddit_posts_concerta.csv  reddit_posts_qelbree.csv  side_effects.csv  simulants_reviews.csv
data/cleaned_reddit/: reddit_posts_Vyvanse.csv  reddit_posts_adderall.csv  reddit_posts_clonidine.csv  reddit_posts_concerta.csv  (+3 more)
docs/: Makefile  changelog.md  conf.py  example.ipynb  index.md  make.bat
output/: adderall_rank.csv  adderall_rank_bert.csv  clonidine_rank.csv  clonidine_rank_bert.csv  concerta_rank.csv  concerta_rank_bert.csv  dexedrine_rank.csv  dexedrine_rank_bert.csv  dexstrostat_rank.csv  dexstrostat_rank_bert.csv  intuniv_rank.csv  intuniv_rank_bert.csv  kapvay_rank.csv  kapvay_rank_bert.csv  lntuniv_rank.csv  lntuniv_rank_bert.csv  merged_drug_data.csv  new_comment_dict.csv  qelbree_rank.csv  qelbree_rank_bert.csv  ritalin_rank.csv  ritalin_rank_bert.csv  side_effect_scores.csv  side_effect_scores_bert.csv  strattera_rank.csv  strattera_rank_bert.csv  top_k_comments.csv  top_k_comments_bert.csv  vyvanse_rank.csv  vyvanse_rank_bert.csv  wellbutrin_rank.csv  wellbutrin_rank_bert.csv
processed_data/: reddit_posts_Vyvanse.csv  reddit_posts_adderall.csv  reddit_posts_clonidine.csv  reddit_posts_concerta.csv  reddit_posts_lntuniv.csv  reddit_posts_strattera.csv
tests/: test_side_effect.py
website/: next.config.js  theme.config.tsx
(+79 files in other folders)
