[tool.poetry]
name = "side_effect"
version = "0.1.0"
description = "analyze side effect data"
authors = ["Xinzhou Li"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
